test/error/first/main.luau
local l = require "./layout"

return l.box "yeah"(0)
